# cdr

./: .gitignore  README_PYTHON.md  pyproject.toml
.github/workflows/: python.yml
cdr/: __init__.py  encapsulation_kind.py  get_encapsulation_kind_info.py  length_codes.py  reader.py  size_calculator.py  writer.py
python_cdr/: reader.py
python_cdr/cdr/: get_encapsulation_kind_info.py  reader.py
tests/: test_reader.py  test_size_calculator.py  test_writer.py
