[project]
name = "cdr"
version = "0.1.0"
description = "Python package for the cdr project"
requires-python = ">=3.10"
dependencies = [
  "typing-extensions",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
